re order inclusion of frozen cells to avoid z-index css.

--- a/themes/react-data-grid-cell.css
+++ b/themes/react-data-grid-cell.css
@@ -19,14 +19,6 @@
   will-change: transform;
 }
 
-.react-grid-Cell--frozen {
-  z-index: 12;
-}
-
-.react-grid-Cell--frozen:focus {
-  z-index: 12;
-}
-
 .rdg-last--frozen {
   border-right: 1px solid #dddddd;
   box-shadow: 2px 0 5px -2px rgba(136, 136, 136, .3) !important;
@@ -79,9 +71,6 @@
   overflow: visible !important;
 }
 
-.react-grid-Cell--frozen.editing {
-  z-index: 100;
-}
 .react-grid-Cell.editing .has-error input {
   border: 2px red solid !important;
   border-radius: 2px !important;
